fixed footer so that it won't overflow the content

--- a/app/javascript/src/styles.scss
+++ b/app/javascript/src/styles.scss
@@ -161,11 +161,16 @@ nav {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
+
 footer {
   background-color: #0077b5;
   color: #fff;
   padding: 2rem;
   text-align: center;
+}
+
+.content {
+  margin-bottom: 2rem;
 }
 
 .footer_buttons {
